# ADog

./: .gitignore  ADog.db  ADog.pro  CMakeLists.txt  README.md  dbmanager.cpp  dbmanager.h  iconlabel.cpp  iconlabel.h  main.cpp  res.qrc  test.json  usage_data.json  usage_data1.json  widget.cpp  widget.h  widget.ui
Utils/: AppUtil.cpp  AppUtil.h  Util.cpp  Util.h  systemtrayutils.cpp  systemtrayutils.h
testexport/: usageRecord.db
